fix IE input text alignment issue

--- a/RM.MailshotsOnline/RM.MailshotsOnline.Web/sass/components/_title-bar.scss
+++ b/RM.MailshotsOnline/RM.MailshotsOnline.Web/sass/components/_title-bar.scss
@@ -33,6 +33,7 @@
 			@include font-size(28);
 			font-family: $ChevinLight;
 			height: 50px;
+			padding: 0 15px;
 			text-align: center;
 			width: 400px;
 		}
